LWC-4650 added basic download state; displays search result heading for removed files

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -670,6 +670,7 @@ ListViewTableEditorRenderer.properitesSimilarShownPressedIcon = icons/info_simil
 ListViewTableEditorRenderer.spamIcon = icons/Trash.png
 ListViewTableEditorRenderer.downloadingIcon = icons/downloads.png
 ListViewTableEditorRenderer.libraryIcon = icons/library.png
+ListViewTableEditorRenderer.warningIcon = icons/warning.png
 ListViewTableEditorRenderer.dividerIcon = icons/list_view_divider.png
 ListViewTableEditorRenderer.subHeadingLabelColor = #313131
 ListViewTableEditorRenderer.metadataLabelColor = #9a9a9a
@@ -1102,6 +1103,7 @@ ShapeDialog.isPositionedRelativeToOwner = false
 IconLabelRenderer.spamIcon = icons/Trash.png
 IconLabelRenderer.downloadingIcon = icons/downloads.png
 IconLabelRenderer.libraryIcon = icons/library.png
+IconLabelRenderer.warningIcon = icons/warning.png
 IconLabelRenderer.disabledForegroundColor = 128,128,128
 IconLabelRenderer.font = DIALOG-PLAIN-11
 
