Adding changes to jacob, with support for setting to LOCAL_SERVER instead of inprocess. Keeping it in process for now untill we can figure out the issues with going out of process.

--- a/.classpath
+++ b/.classpath
@@ -132,7 +132,6 @@
 	<classpathentry kind="lib" path="lib/jars/tests/javax.servlet-5.1.12.jar"/>
 	<classpathentry kind="lib" path="lib/jars/tests/org.mortbay.jetty-5.1.12.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jmdns.jar"/>
-	<classpathentry kind="lib" path="lib/jars/windows/jacob-1.14.3.jar" sourcepath="lib/sources/jacob-1.14.3_src.zip"/>
 	<classpathentry kind="lib" path="lib/jars/google-collect-1.0-rc2.jar" sourcepath="lib/sources/google-collect-src-1.0-rc2.zip"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/jars/mime-util.jar" sourcepath="lib/sources/mime-util-src.jar"/>
@@ -166,5 +165,6 @@
 	<classpathentry kind="lib" path="lib/jars/jaudiotagger-1.0.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/jars/foxtrot-core-3.0.jar" sourcepath="lib/sources/foxtrot-3.0.zip"/>
 	<classpathentry kind="lib" path="lib/jars/fmj-20091008-6.jar" sourcepath="lib/sources/fmj-source.zip"/>
+	<classpathentry kind="lib" path="lib/jars/windows/jacob-1.15-M1-lw.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
