--- a/components/common/dependencies.props
+++ b/components/common/dependencies.props
@@ -29,7 +29,7 @@ httpcore-nio.version=4.1-alpha2-r821939
 icu4j.version=
 inspTool.version=0.4
 iTunes.version=0.0.1
-jacob.version=1.14.3
+jacob.version=1.15-M1-lw
 jaudiotagger.version=1.0.9.1
 javax.servlet.version=5.1.12
 jcip-annotations.version=
