LWC-4634 updated transfer tray tab highlight colors

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -388,8 +388,8 @@ TableColors.disabledForegroundColor = 128,128,128
 BottomHeaderPanel.moreButtonArrow = icons/arrow_down_blue_tiny.png
 BottomHeaderPanel.scrollPaneNubIcon = icons/scrollpanenub.png
 BottomHeaderPanel.hyperlinkFont = DIALOG-NORMAL-10
-BottomHeaderPanel.highlightBackground = #d8d8d8
-BottomHeaderPanel.highlightBorderColor = #d8d8d8
+BottomHeaderPanel.highlightBackground = #bbbaba
+BottomHeaderPanel.highlightBorderColor = #bbbaba
 BottomHeaderPanel.selectionTopGradientColor = #565656
 BottomHeaderPanel.selectionBottomGradientColor = #8b8b8b
 BottomHeaderPanel.selectionTopBorderColor = #383838
