--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -109,6 +109,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.bittorrent.BTTorrentFileDownloaderImpl=ALL
 #log4j.logger.com.limegroup.bittorrent.TorrentUploadManager=ALL
 #log4j.logger.com.limegroup.gnutella=ALL
+log4j.logger.com.limegroup.gnutella.malware=ALL
 #log4j.logger.com.limegroup.gnutella.AcceptorImpl=ALL
 #log4j.logger.com.limegroup.gnutella.AcceptorTest=ALL
 #log4j.logger.com.limegroup.gnutella.ActiveLimeWireCheck=ALL
