fix for taskbar icon on Windows 7:  LWC-4438

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -447,6 +447,9 @@ ImageCellEditor.width = 128
 
 #The icon to use for all frames or dialogues.
 LimeIconInfo.limeIcon = icons/limeicon.gif
+LimeIconInfo.lime16 = icons/lime_Bevel_16.png
+LimeIconInfo.lime32 = icons/lime_Bevel_32.png
+LimeIconInfo.lime48 = icons/lime_Bevel_48.png
 LimeIconInfo.limeFrameIconLocation=org/limewire/ui/swing/mainframe/resources/icons/lime.ico
 
 # Icons to use in SortAndFilterPanel.
