saving partial full vdb updates & reusing them if necessary.

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -250,6 +250,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.lws.server.LWSManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.lws.server.LowLevelLWSDownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.lws.server.SimpleWebServer=ALL
+#log4j.logger.com.limegroup.gnutella.malware=ALL
 #log4j.logger.com.limegroup.gnutella.messagehandlers=ALL
 #log4j.logger.com.limegroup.gnutella.messagehandlers.AllNetworkPushRequestHandler=ALL
 #log4j.logger.com.limegroup.gnutella.messagehandlers.InspectionRequestHandler=ALL
