--- a/components/common/dependencies.props
+++ b/components/common/dependencies.props
@@ -2,7 +2,9 @@ activation.version=1.1
 aopalliance.version=
 AppFramework.version=
 AppleJavaExtensions.version=
+asm.version=3.1
 bcel.version=
+cglib.version=2.2
 cglib-nodep.version=
 clink.version=
 commons-codec.version=1.3
@@ -13,7 +15,7 @@ daap.version=
 dnsjava.version=2.0.6
 fb-java-api.version=2.1.1
 fb-java-api-schema.version=2.1.1
-fmj.version=20091008-18
+fmj.version=20091008-19
 foxtrot-core.version=3.0
 gettext-commons.version=
 glazedlists.version=snapshot20090628_java15
@@ -40,7 +42,7 @@ jmock.version=
 jmock-junit3.version=
 jmock-junit4.version=
 jmock-legacy.version=
-jna.version=3.1.0
+jna.version=3.2.2
 jogg.version=
 jorbis.version=
 json.version=20070829
@@ -59,7 +61,11 @@ objensis.version=
 org.mortbay.jetty.version=5.1.12
 onion-common.version=
 onion-fec.version=
+rococoa-cocoa.version=20091217-1
+rococoa-core.version=20091217-1
 saxpath.version=1.0-fcs
+slf4j-api.version=1.5.8
+slf4j-jdk14.version=1.5.8
 smack.version=
 smackx.version=
 swingx.version=1.0
