--- a/private-components/swingui/ivy.xml
+++ b/private-components/swingui/ivy.xml
@@ -25,6 +25,12 @@
 
 		<dependency org="none" name="compile/AppleJavaExtensions" rev="${AppleJavaExtensions.version}" conf="compile"/>
         <dependency org="none" name="fmj" rev="${fmj.version}" conf="compile,runtime"/>
+        <dependency org="none" name="osx/asm" rev="${asm.version}" conf="compile,runtime"/>
+        <dependency org="none" name="osx/cglib" rev="${cglib.version}" conf="compile,runtime"/>
+        <dependency org="none" name="osx/rococoa-core" rev="${rococoa-core.version}" conf="compile,runtime"/>
+        <dependency org="none" name="osx/rococoa-cocoa" rev="${rococoa-cocoa.version}" conf="compile,runtime"/>
+        <dependency org="none" name="osx/slf4j-api" rev="${slf4j-api.version}" conf="compile,runtime"/>
+        <dependency org="none" name="osx/slf4j-jdk14" rev="${slf4j-jdk14.version}" conf="compile,runtime"/>
 		<dependency org="none" name="foxtrot-core" rev="${foxtrot-core.version}" conf="compile,runtime"/>
 		<dependency org="none" name="google-collect" rev="${google-collect.version}" conf="compile,runtime"/>
         <dependency org="none" name="guice-assistedinject" rev="${guice-assistedinject.version}" conf="compile,runtime"/>
