I fixed a problem with a reference to the fmj library in the classpath.

--- a/.classpath
+++ b/.classpath
@@ -160,8 +160,8 @@
 	<classpathentry kind="lib" path="lib/jars/osx/slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jna-3.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/jars/osx/slf4j-jdk14-1.5.8.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/fmj"/>
 	<classpathentry kind="lib" path="lib/jars/osx/rococoa-cocoa-20091217-1.jar"/>
 	<classpathentry kind="lib" path="lib/jars/osx/rococoa-core-20091217-1.jar"/>
+	<classpathentry kind="lib" path="lib/jars/fmj-20091008-19.jar" sourcepath="lib/sources/fmj-source.zip" />
 	<classpathentry kind="output" path="bin"/>
 </classpath>
