--- a/components/activation/ivy.xml
+++ b/components/activation/ivy.xml
@@ -8,6 +8,7 @@
     </publications>
     <dependencies>
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="activation-api" rev="latest.integration" conf="compile,runtime"/>
             
         <dependency org="none" name="guice" rev="${guice.version}" conf="compile,runtime"/>
     	
