--- a/components/core-glue/ivy.xml
+++ b/components/core-glue/ivy.xml
@@ -8,6 +8,8 @@
         <artifact name="core-glue-test-common" conf="test-common"/>
     </publications>
     <dependencies>
+        <dependency org="org.limewire" name="activation-api" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="activation" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="friend" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="collection" rev="latest.integration" conf="compile,runtime"/>
