--- a/private-components/mock-core/ivy.xml
+++ b/private-components/mock-core/ivy.xml
@@ -7,7 +7,8 @@
         <artifact name="mock-core" conf="master"/>
     </publications>
     <dependencies>
-      <dependency org="org.limewire" name="friend" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="activation-api" rev="latest.integration" conf="compile,runtime"/>
+      	<dependency org="org.limewire" name="friend" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="collection" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="io" rev="latest.integration" conf="compile,runtime"/>
