--- a/private-components/swingui/ivy.xml
+++ b/private-components/swingui/ivy.xml
@@ -8,6 +8,7 @@
     </publications>
     <dependencies>
         <!-- compile & runtime dependencies. -->
+        <dependency org="org.limewire" name="activation-api" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="friend" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="io" rev="latest.integration" conf="compile,runtime"/>
