--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -101,6 +101,8 @@ ActivationPanel.font = DIALOG-PLAIN-11
 ActivationPanel.fontColor = #313131
 ActivationPanel.errorColor = #FF0000
 
+ActivationTable.infoIcon = icons/info.png
+
 ChatFrame.borderColor=#313131
 ChatFrame.dividerColor=#838383
 
