some initial code for module event handling

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -100,6 +100,8 @@ ActivationPanel.height = 230
 ActivationPanel.font = DIALOG-PLAIN-11
 ActivationPanel.fontColor = #313131
 ActivationPanel.errorColor = #FF0000
+ActivationPanel.licenseErrorIcon = icons/warning.png
+ActivationPanel.unsupportedIcon = icons/notice.png
 
 ActivationTable.infoIcon = icons/info.png
 
