Iniitial implementation of the first start activation dialog.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -106,6 +106,9 @@ ActivationWarningPanel.warningIcon = icons/warning.png
 
 ActivationTable.infoIcon = icons/info.png
 
+ActivationStateIconPanel.errorIcon = icons/file_error.png
+SetupPage3.errorColor = #FF0000
+
 ChatFrame.borderColor=#313131
 ChatFrame.dividerColor=#838383
 
