--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -964,25 +964,24 @@ ComboBoxDecorator.miniDownIcon = icons/Arrow_Down_Tiny_White.png
 ComboBoxDecorator.lightFullIcon = icons/Arrow_Down_Tiny.png
 ComboBoxDecorator.darkFullIcon = icons/Arrow_Down_Tiny.png
 
-# Custom drawn progress bar colours
-ProProgressPainterFactory.barBackgroundGradientTop = #ffffff
-ProProgressPainterFactory.barBackgroundGradientBottom = #ffffff
-ProProgressPainterFactory.barBorder = #00316b
-ProProgressPainterFactory.barBorderDisabled = #8a8a8a
-ProProgressPainterFactory.barForegroundGradientTop = #3883cf
-ProProgressPainterFactory.barForegroundGradientBottom = #1667a8
-ProProgressPainterFactory.barDisabledForegroundGradientTop = #d4d4d4
-ProProgressPainterFactory.barDisabledForegroundGradientBottom = #d4d4d4
-ProProgressPainterFactory.barUpperAccent = #3d9dff
+# Custom drawn progress bar colors
+ProgressPainterFactoryImpl.barBackgroundGradientTop = #ffffff
+ProgressPainterFactoryImpl.barBackgroundGradientBottom = #ffffff
+ProgressPainterFactoryImpl.barBorderDisabled = #8a8a8a
+ProgressPainterFactoryImpl.barDisabledForegroundGradientTop = #d4d4d4
+ProgressPainterFactoryImpl.barDisabledForegroundGradientBottom = #d4d4d4
+ProgressPainterFactoryImpl.barUpperAccent = #3d9dff
 
-BasicProgressPainterFactory.barBackgroundGradientTop = #ffffff
-BasicProgressPainterFactory.barBackgroundGradientBottom = #ffffff
-BasicProgressPainterFactory.barBorder = #537e10
-BasicProgressPainterFactory.barBorderDisabled = #8a8a8a
-BasicProgressPainterFactory.barForegroundGradientTop = #cff88f
-BasicProgressPainterFactory.barForegroundGradientBottom = #aacb75
-BasicProgressPainterFactory.barDisabledForegroundGradientTop = #d4d4d4
-BasicProgressPainterFactory.barDisabledForegroundGradientBottom = #d4d4d4
+# Custom Basic progress bar color
+ProgressPainterFactoryImpl.basicBarBorder = #537e10
+ProgressPainterFactoryImpl.basicBarForegroundGradientTop = #cff88f
+ProgressPainterFactoryImpl.basicBarForegroundGradientBottom = #aacb75
+
+# Custom Pro progress bar colors
+ProgressPainterFactoryImpl.proBarBorder = #00316b
+ProgressPainterFactoryImpl.proBarForegroundGradientTop = #3883cf
+ProgressPainterFactoryImpl.proBarForegroundGradientBottom = #1667a8
+
 
 # Media Bar Slider colours
 SliderPainterFactory.mediaSliderBorder = #343434
