I updated the setup dialogs in client activation dialog with Wynne's new specs.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -107,7 +107,13 @@ ActivationWarningPanel.warningIcon = icons/warning.png
 ActivationTable.infoIcon = icons/info.png
 
 ActivationStateIconPanel.errorIcon = icons/file_error.png
-SetupPage3.errorColor = #FF0000
+
+SetupActivationPanel.errorColor = #FF0000
+SetupActivationThankYouPanel.thankYouColor = #59762d
+SetupActivationTable.columnNameColor = #59762d
+SetupActivationTable.checkIcon = icons/check.png
+SetupActivationTable.headerBackgroundColor = #eeeeee
+SetupActivationTable.headerFont = DIALOG-BOLD-12
 
 ChatFrame.borderColor=#313131
 ChatFrame.dividerColor=#838383
