I made some changes to accomodate Wynne's latest specs.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -110,10 +110,12 @@ ActivationStateIconPanel.errorIcon = icons/file_error.png
 
 SetupActivationPanel.errorColor = #FF0000
 SetupActivationThankYouPanel.thankYouColor = #59762d
+SetupActivationThankYouPanel.infoIcon = icons/info.png
 SetupActivationTable.columnNameColor = #59762d
 SetupActivationTable.checkIcon = icons/check.png
 SetupActivationTable.headerBackgroundColor = #eeeeee
 SetupActivationTable.headerFont = DIALOG-BOLD-12
+SetupActivationTable.infoIcon = icons/info.png
 
 ChatFrame.borderColor=#313131
 ChatFrame.dividerColor=#838383
