--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -95,6 +95,7 @@ FriendsSignIn.ShareLabel.font = DIALOG-BOLD-12
 #The status panel at the very bottom
 StatusPanel.height = 19
 
+ActivationPanel.tableWidth = 440
 ActivationPanel.font = DIALOG-PLAIN-11
 ActivationPanel.fontColor = #313131
 ActivationPanel.errorColor = #FF0000
