--- a/components/activation/ivy.xml
+++ b/components/activation/ivy.xml
@@ -7,12 +7,28 @@
         <artifact name="activation" conf="master"/>
     </publications>
     <dependencies>
+        <dependency org="org.limewire" name="collection" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="activation-api" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="http" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="io" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="security" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="setting" rev="latest.integration" conf="compile,runtime"/>
             
         <dependency org="none" name="guice" rev="${guice.version}" conf="compile,runtime"/>
+        <dependency org="none" name="json" rev="${json.version}" conf="compile,runtime"/>
+        <dependency org="none" name="commons-logging" rev="${commons-logging.version}" conf="compile,runtime"/>
+        <dependency org="none" name="httpclient" rev="${httpclient.version}" conf="compile,runtime"/>
+        <dependency org="none" name="httpcore" rev="${httpcore.version}" conf="compile,runtime"/>
     	
+    	<!-- test dependencies. -->
     	<dependency org="org.limewire" name="common" rev="latest.integration" conf="test"/>
+    	
+    	<dependency org="none" name="guice" rev="${guice.version}" conf="test"/>
+        <dependency org="none" name="json" rev="${json.version}" conf="test"/>
+        <dependency org="none" name="commons-logging" rev="${commons-logging.version}" conf="test"/>
+        <dependency org="none" name="httpclient" rev="${httpclient.version}" conf="test"/>
+        <dependency org="none" name="httpcore" rev="${httpcore.version}" conf="test"/>
     </dependencies>
 
 </ivy-module>
