--- a/components/activation/ivy.xml
+++ b/components/activation/ivy.xml
@@ -29,6 +29,7 @@
         <dependency org="none" name="commons-logging" rev="${commons-logging.version}" conf="test"/>
         <dependency org="none" name="httpclient" rev="${httpclient.version}" conf="test"/>
         <dependency org="none" name="httpcore" rev="${httpcore.version}" conf="test"/>
+        <dependency org="none" name="tests/org.mortbay.jetty" rev="${org.mortbay.jetty.version}" conf="test"/>
     </dependencies>
 
 </ivy-module>
