I fixed a couple of issues with the setup activation dialog.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -110,6 +110,7 @@ ActivationStateIconPanel.errorIcon = icons/file_error.png
 SetupActivationPanel.errorColor = #FF0000
 SetupActivationThankYouPanel.thankYouColor = #59762d
 SetupActivationThankYouPanel.infoIcon = icons/info.png
+SetupActivationThankYouPanel.noticeIcon = icons/notice.png
 SetupActivationTable.columnNameColor = #59762d
 SetupActivationTable.checkIcon = icons/check.png
 SetupActivationTable.headerBackgroundColor = #eeeeee
