ui fixes switching to qa-activate test environment

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -104,6 +104,7 @@ ActivationPanel.unsupportedIcon = icons/notice.png
 ActivationWarningPanel.warningIcon = icons/warning.png
 
 ActivationTable.infoIcon = icons/info.png
+ActivationTable.expiredColor = #FF0000
 
 ActivationStateIconPanel.errorIcon = icons/file_error.png
 
