I implemented the blocked license key dialog and fixed a couple of annoyances with the setup dialog.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -118,6 +118,10 @@ SetupActivationTable.headerBackgroundColor = #eeeeee
 SetupActivationTable.headerFont = DIALOG-BOLD-12
 SetupActivationTable.infoIcon = icons/info.png
 
+BlockedNotificationDialog.dialogWidth = 400
+BlockedNotificationDialog.dialogHeight = 180
+BlockedNotificationDialog.headingColor = #63724A
+
 ChatFrame.borderColor=#313131
 ChatFrame.dividerColor=#838383
 
