made test code more flexible.

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -164,7 +164,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.connection.BlockingConnection=ALL
 #log4j.logger.com.limegroup.gnutella.connection.ConnectionChecker=ALL
 #log4j.logger.com.limegroup.gnutella.connection.ConnectionCheckerManagerImpl=ALL
-#log4j.logger.com.limegroup.gnutella.connection.GnutellaConnection=ALL
+log4j.logger.com.limegroup.gnutella.connection.GnutellaConnection=ALL
 #log4j.logger.com.limegroup.gnutella.daap=ALL
 #log4j.logger.com.limegroup.gnutella.daap.DaapManager=ALL
 #log4j.logger.com.limegroup.gnutella.daap.LimeDaapServerNIO=ALL
