--- a/components/gnutella-core/ivy.xml
+++ b/components/gnutella-core/ivy.xml
@@ -8,6 +8,7 @@
         <artifact name="gnutella-core-test-common" conf="test-common"/>
     </publications>
     <dependencies>
+        <dependency org="org.limewire" name="activation-api" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="friend" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="collection" rev="latest.integration" conf="compile,runtime"/>
