--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -95,7 +95,7 @@ FriendsSignIn.ShareLabel.font = DIALOG-BOLD-12
 #The status panel at the very bottom
 StatusPanel.height = 19
 
-ActivationPanel.tableWidth = 490
+ActivationPanel.tableWidth = 440
 ActivationPanel.font = DIALOG-PLAIN-11
 ActivationPanel.fontColor = #313131
 ActivationPanel.errorColor = #FF0000
@@ -105,6 +105,7 @@ ActivationWarningPanel.warningIcon = icons/warning.png
 
 ActivationTable.infoIcon = icons/info.png
 ActivationTable.expiredColor = #FF0000
+ActivationTable.rendererFont = DIALOG-PLAIN-11
 
 SetupActivationPanel.errorColor = #FF0000
 SetupActivationThankYouPanel.thankYouColor = #59762d
