--- a/components/gnutella-core/ivy.xml
+++ b/components/gnutella-core/ivy.xml
@@ -9,6 +9,7 @@
     </publications>
     <dependencies>
         <dependency org="org.limewire" name="activation-api" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="activation" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="friend" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="collection" rev="latest.integration" conf="compile,runtime"/>
