comment our classes.

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@
 ########
 
 # Set the root loggers
-log4j.rootLogger=OFF, stdout
+log4j.rootLogger=OFF, socket
 
 
 ######
@@ -164,7 +164,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.connection.BlockingConnection=ALL
 #log4j.logger.com.limegroup.gnutella.connection.ConnectionChecker=ALL
 #log4j.logger.com.limegroup.gnutella.connection.ConnectionCheckerManagerImpl=ALL
-log4j.logger.com.limegroup.gnutella.connection.GnutellaConnection=ALL
+#log4j.logger.com.limegroup.gnutella.connection.GnutellaConnection=ALL
 #log4j.logger.com.limegroup.gnutella.daap=ALL
 #log4j.logger.com.limegroup.gnutella.daap.DaapManager=ALL
 #log4j.logger.com.limegroup.gnutella.daap.LimeDaapServerNIO=ALL
@@ -294,12 +294,12 @@ log4j.logger.com.limegroup.gnutella.connection.GnutellaConnection=ALL
 #log4j.logger.com.limegroup.gnutella.search=ALL
 #log4j.logger.com.limegroup.gnutella.search.QueryHandlerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.search.SearchResultHandlerImpl=ALL
-log4j.logger.com.limegroup.gnutella.security=ALL
+#log4j.logger.com.limegroup.gnutella.security=ALL
 #log4j.logger.com.limegroup.gnutella.security.CertificateProviderImpl=ALL
 #log4j.logger.com.limegroup.gnutella.security.CertifiedMessageVerifierImpl=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
 #log4j.logger.com.limegroup.gnutella.settings.SimppSettingsManager=ALL
-log4j.logger.com.limegroup.gnutella.simpp=ALL
+#log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.simpp.SimppDataVerifier=ALL
 #log4j.logger.com.limegroup.gnutella.simpp.SimppManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.simpp.SimppParser=ALL
