fixing a bunch of ui issues

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -107,6 +107,8 @@ ActivationTable.infoIcon = icons/info.png
 ActivationTable.expiredColor = #FF0000
 ActivationTable.rendererFont = DIALOG-PLAIN-11
 
+ActivationInfoAction.font = DIALOG-PLAIN-11
+
 SetupActivationPanel.errorColor = #FF0000
 SetupActivationThankYouPanel.thankYouColor = #59762d
 SetupActivationThankYouPanel.expiredMessageColor = #313131
