--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -258,6 +258,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.lws.server.LowLevelLWSDownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.lws.server.SimpleWebServer=ALL
 #log4j.logger.com.limegroup.gnutella.malware=ALL
+#log4j.logger.com.limegroup.gnutella.malware.FileExtensionChecker=ALL
 #log4j.logger.com.limegroup.gnutella.malware.NFOFile=ALL
 #log4j.logger.com.limegroup.gnutella.malware.VirusDefinitionDownloaderImpl=ALL
 #log4j.logger.com.limegroup.gnutella.malware.VirusDefinitionManagerImpl=ALL
