some table changes to make osx look better

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -106,6 +106,7 @@ ActivationWarningPanel.warningIcon = icons/warning.png
 ActivationTable.infoIcon = icons/info.png
 ActivationTable.expiredColor = #FF0000
 ActivationTable.rendererFont = DIALOG-PLAIN-11
+ActivationTable.columnWidth = 100;
 
 ActivationInfoAction.font = DIALOG-PLAIN-11
 
