review related changes

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -128,7 +128,6 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.MessageRouterImpl=ALL
 #log4j.logger.com.limegroup.gnutella.MulticastServiceImpl=ALL
 #log4j.logger.com.limegroup.gnutella.NetworkManagerImpl=ALL
-#log4j.logger.com.limegroup.gnutella.NetworkUpdateSanityCheckerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.NodeAssignerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.OutOfBandThroughputMeasurer=ALL
 #log4j.logger.com.limegroup.gnutella.PromotionBinderRequestorImpl=ALL
@@ -300,7 +299,6 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.settings=ALL
 #log4j.logger.com.limegroup.gnutella.settings.SimppSettingsManager=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
-#log4j.logger.com.limegroup.gnutella.simpp.SimppDataVerifier=ALL
 #log4j.logger.com.limegroup.gnutella.simpp.SimppManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.simpp.SimppParser=ALL
 #log4j.logger.com.limegroup.gnutella.simpp.SimppSender=ALL
@@ -332,7 +330,14 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.xml.LimeXMLDocumentFactoryImpl=ALL
 #log4j.logger.com.limegroup.gnutella.xml.LimeXMLDocumentHelper=ALL
 #log4j.logger.com.limegroup.gnutella.xml.LimeXMLReplyCollection=ALL
+#log4j.logger.com.limegroup.gnutella.xml.LimeXMLUtils=ALL
 #log4j.logger.com.limegroup.gnutella.xml.XMLParsingUtils=ALL
+#log4j.logger.org.limewire.activation.impl=ALL
+#log4j.logger.org.limewire.activation.impl.ActivationCommunicatorImpl=ALL
+#log4j.logger.org.limewire.activation.impl.ActivationManagerImpl=ALL
+#log4j.logger.org.limewire.activation.impl.ActivationResponseFactoryImpl=ALL
+#log4j.logger.org.limewire.activation.serial=ALL
+#log4j.logger.org.limewire.activation.serial.ActivationSerializerImpl=ALL
 #log4j.logger.org.limewire.bittorrent=ALL
 #log4j.logger.org.limewire.bittorrent.BTDataImpl=ALL
 #log4j.logger.org.limewire.collection=ALL
