--- a/components/activation/ivy.xml
+++ b/components/activation/ivy.xml
@@ -27,6 +27,7 @@
     	
     	<dependency org="none" name="guice" rev="${guice.version}" conf="test"/>
         <dependency org="none" name="json" rev="${json.version}" conf="test"/>
+        <dependency org="none" name="commons-codec" rev="${commons-codec.version}" conf="compile,runtime"/>
         <dependency org="none" name="commons-logging" rev="${commons-logging.version}" conf="test"/>
         <dependency org="none" name="httpclient" rev="${httpclient.version}" conf="test"/>
         <dependency org="none" name="httpcore" rev="${httpcore.version}" conf="test"/>
