LWCR-PRV-128: Send out spam tokens by SIMPP.

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -305,6 +305,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.simpp.SimppSender=ALL
 #log4j.logger.com.limegroup.gnutella.spam=ALL
 #log4j.logger.com.limegroup.gnutella.spam.RatingTable=ALL
+#log4j.logger.com.limegroup.gnutella.spam.TemplateHashTokenFactory=ALL
 #log4j.logger.com.limegroup.gnutella.spam.Tokenizer=ALL
 #log4j.logger.com.limegroup.gnutella.statistics=ALL
 #log4j.logger.com.limegroup.gnutella.statistics.OutOfBandStatisticsImpl=ALL
