I changed the color of the activate button in the setup dialog and if the user accidentally hits "no thanks" but they've entered a license key, it tries to use it for activation.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -54,6 +54,9 @@ SetupComponentDecorator.headerBottomBorder2 = #ffffff
 SetupComponentDecorator.greenButtonForeground = #313131
 SetupComponentDecorator.greenButtonFont = DIALOG-BOLD-14
 SetupComponentDecorator.backButtonFont = DIALOG-BOLD-14
+SetupPage3.greenButtonForeground = #313131
+SetupPage3.greyButtonForeground = #ffffff
+SetupActivationPanel.greenButtonForeground = #313131
 
 #The Top panel stuff
 WireframeTop.minimumSize=0, 41
