--- a/private-components/swingui/ivy.xml
+++ b/private-components/swingui/ivy.xml
@@ -23,6 +23,7 @@
         <dependency org="org.limewire" name="mock-core" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="bittorrent-api" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="geocode" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="rest" rev="latest.integration" conf="compile,runtime"/>
 
 		<dependency org="none" name="compile/AppleJavaExtensions" rev="${AppleJavaExtensions.version}" conf="compile"/>
         <dependency org="none" name="fmj" rev="${fmj.version}" conf="compile,runtime"/>
