LWC-4755: dht based follow/bookmark prototype: initial commit

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@
 ########
 
 # Set the root loggers
-log4j.rootLogger=OFF, stdout
+log4j.rootLogger=OFF, socket
 
 
 ######
@@ -115,7 +115,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.AcceptorImpl=ALL
 #log4j.logger.com.limegroup.gnutella.AcceptorTest=ALL
 #log4j.logger.com.limegroup.gnutella.ActiveLimeWireCheck=ALL
-#log4j.logger.com.limegroup.gnutella.BrowseHostHandler=ALL
+log4j.logger.com.limegroup.gnutella.BrowseHostHandler=ALL
 #log4j.logger.com.limegroup.gnutella.BrowseHostHandlerManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.ConnectionManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.ConnectionWatchdog=ALL
@@ -167,12 +167,12 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.daap=ALL
 #log4j.logger.com.limegroup.gnutella.daap.DaapManager=ALL
 #log4j.logger.com.limegroup.gnutella.daap.LimeDaapServerNIO=ALL
-#log4j.logger.com.limegroup.gnutella.dht=ALL
+log4j.logger.com.limegroup.gnutella.dht=ALL
 #log4j.logger.com.limegroup.gnutella.dht.DHTBootstrapperImpl=ALL
 #log4j.logger.com.limegroup.gnutella.dht.DHTManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.dht.DHTNodeFetcher=ALL
 #log4j.logger.com.limegroup.gnutella.dht.PassiveDHTNodeRouteTable=ALL
-#log4j.logger.com.limegroup.gnutella.dht.db=ALL
+log4j.logger.com.limegroup.gnutella.dht.db=ALL
 #log4j.logger.com.limegroup.gnutella.dht.db.AbstractResultHandler=ALL
 #log4j.logger.com.limegroup.gnutella.dht.db.AltLocFinderImpl=ALL
 #log4j.logger.com.limegroup.gnutella.dht.db.DHTPushEndpointFinder=ALL
@@ -200,7 +200,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloaderImpl=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloaderTest=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.PushDownloadManager=ALL
+log4j.logger.com.limegroup.gnutella.downloader.PushDownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PushList=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.RandomDownloadStrategy=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.RemoteFileDescContext=ALL
@@ -362,7 +362,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.core.impl.library.FriendLibraries=ALL
 #log4j.logger.org.limewire.core.impl.library.LocalFileListImpl=ALL
 #log4j.logger.org.limewire.core.impl.library.PresenceLibraryBrowser=ALL
-#log4j.logger.org.limewire.core.impl.library.RemoteLibraryManagerImpl=ALL
+log4j.logger.org.limewire.core.impl.library.RemoteLibraryManagerImpl=ALL
+log4j.logger.org.limewire.core.impl.library.FriendFileDbCache=ALL
 #log4j.logger.org.limewire.core.impl.mozilla=ALL
 #log4j.logger.org.limewire.core.impl.mozilla.LimeMozillaDownloadManagerListenerImpl=ALL
 #log4j.logger.org.limewire.core.impl.mozilla.LimeMozillaDownloadProgressListenerImpl=ALL
