initial commit to torrent search branch

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@
 ########
 
 # Set the root loggers
-log4j.rootLogger=OFF, stdout
+log4j.rootLogger=OFF, socket
 
 
 ######
@@ -144,6 +144,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
 #log4j.logger.com.limegroup.gnutella.UPnPManager=ALL
 #log4j.logger.com.limegroup.gnutella.altlocs=ALL
+#log4j.logger.com.limegroup.gnutella.ResponseVerifierImpl=ALL
 #log4j.logger.com.limegroup.gnutella.altlocs.AltLocManager=ALL
 #log4j.logger.com.limegroup.gnutella.altlocs.DownloaderGuidAlternateLocationFinder=ALL
 #log4j.logger.com.limegroup.gnutella.auth=ALL
@@ -345,6 +346,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.collection=ALL
 #log4j.logger.org.limewire.collection.IntervalSetTest=ALL
 #log4j.logger.org.limewire.core.impl.browse=ALL
+log4j.logger.org.limewire.core.impl.TorrentFactoryImpl=ALL
 #log4j.logger.org.limewire.core.impl.browse.FriendBrowseDownloadRUDPTest=ALL
 #log4j.logger.org.limewire.core.impl.download.listener=ALL
 #log4j.logger.org.limewire.core.impl.download.listener.TorrentDownloadListener=ALL
@@ -366,7 +368,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.core.impl.mozilla=ALL
 #log4j.logger.org.limewire.core.impl.mozilla.LimeMozillaDownloadManagerListenerImpl=ALL
 #log4j.logger.org.limewire.core.impl.mozilla.LimeMozillaDownloadProgressListenerImpl=ALL
-#log4j.logger.org.limewire.core.impl.search.browse=ALL
+#log4j.logger.org.limewire.core.impl.search=ALL
 #log4j.logger.org.limewire.core.impl.search.browse.MultipleBrowseSearch=ALL
 #log4j.logger.org.limewire.friend.impl=ALL
 #log4j.logger.org.limewire.friend.impl.DefaultFriendAuthenticator=ALL
