Initial commit of related files prototype.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -714,8 +714,8 @@ ListViewTableEditorRenderer.warningIcon = icons/warning.png
 ListViewTableEditorRenderer.dividerIcon = icons/list_view_divider.png
 ListViewTableEditorRenderer.subHeadingLabelColor = #313131
 ListViewTableEditorRenderer.metadataLabelColor = #9a9a9a
-ListViewTableEditorRenderer.downloadSourceCountFont = DIALOG-BOLD-15
-ListViewTableEditorRenderer.downloadSourceCountColor = #2152a6
+ListViewTableEditorRenderer.relevanceFont = DIALOG-BOLD-15
+ListViewTableEditorRenderer.relevanceColor = #2152a6
 ListViewTableEditorRenderer.headingFont = DIALOG-PLAIN-14
 ListViewTableEditorRenderer.subHeadingFont = DIALOG-NORMAL-11
 ListViewTableEditorRenderer.metadataFont = DIALOG-NORMAL-11
