--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -126,7 +126,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.LifecycleManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.MessageRouterImpl=ALL
-log4j.logger.com.limegroup.gnutella.MulticastServiceImpl=ALL
+#log4j.logger.com.limegroup.gnutella.MulticastServiceImpl=ALL
 #log4j.logger.com.limegroup.gnutella.NetworkManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.NodeAssignerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.OutOfBandThroughputMeasurer=ALL
@@ -141,7 +141,7 @@ log4j.logger.com.limegroup.gnutella.MulticastServiceImpl=ALL
 #log4j.logger.com.limegroup.gnutella.SpamServicesImpl=ALL
 #log4j.logger.com.limegroup.gnutella.StandardMessageRouter=ALL
 #log4j.logger.com.limegroup.gnutella.UDPPingerImpl=ALL
-log4j.logger.com.limegroup.gnutella.UDPService=ALL
+#log4j.logger.com.limegroup.gnutella.UDPService=ALL
 #log4j.logger.com.limegroup.gnutella.UPnPManager=ALL
 #log4j.logger.com.limegroup.gnutella.altlocs=ALL
 #log4j.logger.com.limegroup.gnutella.altlocs.AltLocManager=ALL
