Added a header for browsers to indicate that they're in LAN mode and the responder should use its LAN address in browse replies.

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -270,6 +270,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.messages=ALL
 #log4j.logger.com.limegroup.gnutella.messages.GGEPParser=ALL
 #log4j.logger.com.limegroup.gnutella.messages.MessageFactoryImpl=ALL
+log4j.logger.com.limegroup.gnutella.messages.OutgoingQueryReplyFactoryImpl=ALL
 #log4j.logger.com.limegroup.gnutella.messages.QueryRequestImpl=ALL
 #log4j.logger.com.limegroup.gnutella.messages.StaticMessages=ALL
 #log4j.logger.com.limegroup.gnutella.messages.vendor=ALL
