--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@
 ########
 
 # Set the root loggers
-log4j.rootLogger=OFF, socket
+log4j.rootLogger=OFF, stdout
 
 
 ######
@@ -218,7 +218,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader.serial.conversion.DownloadUpgradeTask=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.serial.conversion.OldDownloadConverterImpl=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.serial.conversion.OldDownloadsTest=ALL
-log4j.logger.com.limegroup.gnutella.filters=ALL
+#log4j.logger.com.limegroup.gnutella.filters=ALL
 #log4j.logger.com.limegroup.gnutella.filters.AbstractIPFilter=ALL
 #log4j.logger.com.limegroup.gnutella.filters.HostileFilter=ALL
 #log4j.logger.com.limegroup.gnutella.filters.LocalIPFilter=ALL
