--- a/components/core-glue/ivy.xml
+++ b/components/core-glue/ivy.xml
@@ -48,7 +48,10 @@
         <dependency org="none" name="httpcore-nio" rev="${httpcore-nio.version}" conf="compile,runtime"/>
         <dependency org="none" name="httpclient" rev="${httpclient.version}" conf="compile,runtime"/>
         <dependency org="none" name="commons-codec" rev="${commons-codec.version}" conf="compile,runtime"/>
-        <dependency org="none" name="jcip-annotations" rev="${jcip-annotations.version}" conf="compile,runtime"/>
+        <dependency org="none" name="jcip-annotations"
+        rev="${jcip-annotations.version}" conf="compile,runtime"/>
+	<dependency org="none" name="geoip" rev="${geoip.version}"
+        conf="compile,runtime"/>
        
         <dependency org="none" name="tests/org.mortbay.jetty" rev="${org.mortbay.jetty.version}" conf="test"/>
         <dependency org="none" name="tests/javax.servlet" rev="${javax.servlet.version}" conf="test"/>
