--- a/private-components/swingui/ivy.xml
+++ b/private-components/swingui/ivy.xml
@@ -22,7 +22,9 @@
         <dependency org="org.limewire" name="player-api" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="mock-core" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="bittorrent-api" rev="latest.integration" conf="compile,runtime"/>
-        <dependency org="org.limewire" name="geocode" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="geocode" rev="latest.integration"
+        conf="compile,runtime"/>
+        <dependency org="org.limewire" name="gnutella-core" rev="latest.integration" conf="compile,runtime"/>
 
 		<dependency org="none" name="compile/AppleJavaExtensions" rev="${AppleJavaExtensions.version}" conf="compile"/>
         <dependency org="none" name="fmj" rev="${fmj.version}" conf="compile,runtime"/>
@@ -53,7 +55,10 @@
         <dependency org="none" name="glazedlists" rev="${glazedlists.version}" conf="compile,runtime"/>
         <dependency org="none" name="httpclient" rev="${httpclient.version}" conf="compile,runtime"/>
         <dependency org="none" name="TimingFramework" rev="${TimingFramework.version}" conf="compile,runtime"/>
-        <dependency org="none" name="AnimatedTransitions" rev="${AnimatedTransitions.version}" conf="compile,runtime"/>
+        <dependency org="none" name="AnimatedTransitions"
+        rev="${AnimatedTransitions.version}" conf="compile,runtime"/>
+	<dependency org="none" name="geoip" rev="${geoip.version}"
+        conf="compile,runtime"/>
                 
         <!-- runtime dependencies. -->
         <dependency org="none" name="messages" rev="" conf="runtime"/>
