--- a/components/bittorrent-api/ivy.xml
+++ b/components/bittorrent-api/ivy.xml
@@ -13,5 +13,6 @@
             
     	<!-- test dependencies. -->
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="test"/>
+        <dependency org="org.limewire" name="core-glue" rev="latest.integration" conf="test"/>
     </dependencies>
 </ivy-module>
