adding info icon to upload table

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -364,6 +364,7 @@ DownloadTitleRenderer.downloadingIcon = icons/downloads.png
 DownloadTitleRenderer.antivirusIcon = icons/avg_logo.png
 
 DownloadMessageRendererEditor.infoIcon = icons/info.png
+UploadMessageRenderer.infoIcon = icons/info.png
 
 AVInfoPanel.doNotShowFont = DIALOG-PLAIN-10
 AVInfoPanel.doNotShowForeground = #313131
