--- a/components/common/dependencies.props
+++ b/components/common/dependencies.props
@@ -37,6 +37,7 @@ jaudiotagger.version=1.0.9.1
 javax.servlet.version=5.1.12
 jcip-annotations.version=
 jdic.version=
+je.version=4.0.92
 jing.version=
 jmdns.version=
 jmock.version=
