first torrent uri store test.

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@
 ########
 
 # Set the root loggers
-log4j.rootLogger=OFF, socket
+log4j.rootLogger=OFF, stdout
 
 
 ######
@@ -368,7 +368,7 @@ log4j.logger.org.limewire.core.impl.TorrentFactoryImpl=ALL
 #log4j.logger.org.limewire.core.impl.mozilla=ALL
 #log4j.logger.org.limewire.core.impl.mozilla.LimeMozillaDownloadManagerListenerImpl=ALL
 #log4j.logger.org.limewire.core.impl.mozilla.LimeMozillaDownloadProgressListenerImpl=ALL
-#log4j.logger.org.limewire.core.impl.search=ALL
+log4j.logger.org.limewire.core.impl.search.torrentweb=ALL
 #log4j.logger.org.limewire.core.impl.search.browse.MultipleBrowseSearch=ALL
 #log4j.logger.org.limewire.friend.impl=ALL
 #log4j.logger.org.limewire.friend.impl.DefaultFriendAuthenticator=ALL
